[package]
name = "bufdb-storage"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Steven Lee <leexgone@163.com>"]
description = "An in-memory buffer library."
repository = "https://github.com/leexgone/bufdb"
homepage = "https://github.com/leexgone"
readme = "../../README.md"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# failure = "0.1.8"
# strum = { version = "0.24.1", features = ["derive"] }
# serde_json = "1.0.96"
# serde = { version = "1.0.160", features = ["derive"] }
# chrono = "0.4.24"
bufdb-api = { version = "0.0.1", path = "../bufdb-api" }