[package]
name = "bufdb"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Steven Lee <leexgone@163.com>"]
description = "An in-memory buffer library."
repository = "https://github.com/leexgone/bufdb"
homepage = "https://github.com/leexgone"
readme = "../../README.md"
keywords = []
categories = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# lru = "0.10.0"
chrono = "0.4.24"
bufdb-api = { version = "0.0.1", path = "../bufdb-api" }
bufdb-storage = { version = "0.0.1", path = "../bufdb-storage" }
bufdb-level = { version = "0.0.1", path = "../bufdb-level" }