[package]
name = "bufdb"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Steven Lee <leexgone@163.com>"]
description = "An in-memory buffer library."
repository = "https://github.com/leexgone/bufdb"
homepage = "https://github.com/leexgone"
readme = "../../README.md"
keywords = []
categories = []

[features]
default = ["leveldb"]
leveldb = ["bufdb-level"]

[dependencies]

chrono = "0.4.24"
lazy_static = "1.4.0"
bufdb-api = { version = "0.0.1", path = "../bufdb-api" }
bufdb-storage = { version = "0.0.1", path = "../bufdb-storage" }
bufdb-level = { version = "0.0.1", optional = true, path = "../bufdb-level" }